--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div><a href="mail.google.com">Почта</a></div>
         <div><a href="">Картинки</a></div>
         <div class="log navCircle">
-            <svg class="logoSvg" focusable="false" viewBox="0 0 24 24"><title>Приложения Google</title>
+            <svg class="logoSvg" focusable="false" viewBox="0 0 24 24">
+                <title>Приложения Google</title>
                 <path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path>
             </svg>
         </div>
@@ -37,7 +38,7 @@
         </div>
         
 
-        <p>Сервисы Google доступны на рызных языках: <a href="?lang=en"></a></p>
+        <p>Сервисы Google доступны на рызных языках: <a href="?lang=en">English</a></p>
     </article>
 </body>
 </html>
